[gd_scene load_steps=5 format=2]

[ext_resource path="res://Code/Items/EntityBase.gd" type="Script" id=1]
[ext_resource path="res://Art/Spriteframes/GodotFace_spriteframes.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.0392, 30.4144 )

[sub_resource type="CircleShape2D" id=2]

[node name="EntityBase" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Shape" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 2 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
